--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <p>{{money | currency}}</p>
 <p>{{name | uppercase}}</p>
 <p>{{today | date}}</p>
+<p>{{money | currency : "₺"}} </p>
+<p>{{money | currency : "EUR"}} </p>
+
 
