--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
 <p>{{today | date}}</p>
 <p>{{money | currency : "₺"}} </p>
 <p>{{money | currency : "EUR"}} </p>
-
+<br>
+<p>{{today | date : 'medium'}}</p>
 
