json-slice-percent-titlecase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,10 @@
 <p>{{money | currency : "EUR"}} </p>
 <br>
 <p>{{today | date : 'medium'}}</p>
+<p>{{today | date : 'fullDate'}}</p>
+<p>{{{money, name }| json}}</p>
+<p>{{name|slice:2:3}}</p>
+<p>{{money|percent}}</p>
+<p>{{titleOfTheBook|titlecase}}</p>
 
+<button (click)="loveYouPlus1()">love you</button>
